sinalcabo/force-app/main/default/objects/Account/fields/Cliente_Estrategico__c.field-meta.xml
<CustomField>
    <fullName>Cliente_Estrategico__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SinalCabo: Conta é cliente estratégico. Editável por executivos; read-only para comerciais.</description>
    <label>Cliente Estratégico</label>
    <type>Checkbox</type>
</CustomField>