sinalcabo/force-app/main/default/objects/Account/fields/Closed_Won_12M__c.field-meta.xml
<CustomField>
    <fullName>Closed_Won_12M__c</fullName>
    <description>SinalCabo: Populado por rollup (SC_Account_Rollup_Segmento). Read-only no layout. Base de calculo do campo Segmento desde 08/2026.</description>
    <inlineHelpText>Negocio ganho por esta conta em os ultimos 12 meses COMPLETOS, excluindo o mes corrente: a janela fecha na viragem do mes, logo um negocio ganho hoje so&apos; conta a partir do dia 1 do mes seguinte. E&apos; este valor, e nao o total de sempre, que determina o Segmento.</inlineHelpText>
    <label>Closed Won 12 Meses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>