sinalcabo/force-app/main/default/objects/Account/fields/Closed_Won_Ano_Anterior__c.field-meta.xml
<CustomField>
    <fullName>Closed_Won_Ano_Anterior__c</fullName>
    <description>SinalCabo: Populado por rollup (SC_Account_Rollup_Segmento). Read-only no layout.</description>
    <inlineHelpText>Total de oportunidades ganhas nesta conta no ano civil anterior. Serve de base à comparação de crescimento.</inlineHelpText>
    <label>Closed Won (Ano Anterior)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>