sinalcabo/force-app/main/default/objects/Account/fields/Closed_Won_Grupo_Ano_Anterior__c.field-meta.xml
<CustomField>
    <fullName>Closed_Won_Grupo_Ano_Anterior__c</fullName>
    <description>SinalCabo (DT.2) - Populado pelo rollup hierarquico (SC_Account_Group_Rollup). Soma do Closed Won do ano anterior proprio mais o das contas filhas. Read-only no layout.</description>
    <inlineHelpText>Negocio ganho do GRUPO no ano civil anterior (esta conta mais as filhas). Actualizado automaticamente.</inlineHelpText>
    <label>Closed Won Grupo (Ano Anterior)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>