sinalcabo/force-app/main/default/objects/Account/fields/Crescimento_YoY__c.field-meta.xml
<CustomField>
    <fullName>Crescimento_YoY__c</fullName>
    <description>SinalCabo: Crescimento do Closed Won ano corrente vs. ano anterior. Vazio se cliente novo (sem histórico no ano anterior).</description>
    <formula>IF(
  NULLVALUE(Closed_Won_Ano_Anterior__c, 0) = 0,
  NULL,
  (Closed_Won_Ano_Corrente__c - Closed_Won_Ano_Anterior__c) / Closed_Won_Ano_Anterior__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Variação percentual do Closed Won do ano corrente face ao ano anterior. Fica vazio quando não há histórico no ano anterior (cliente novo).</inlineHelpText>
    <label>Crescimento YoY</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>