sinalcabo/force-app/main/default/objects/Account/fields/Margem_Ganha_Ano_Anterior__c.field-meta.xml
<CustomField>
    <fullName>Margem_Ganha_Ano_Anterior__c</fullName>
    <description>SinalCabo: Populado por rollup (SC_Account_Rollup_Segmento). Soma da margem (Amount - Custo Estimado) das oportunidades ganhas no ano civil anterior. Read-only no layout.</description>
    <inlineHelpText>Soma da margem (Amount menos Custo Estimado) das oportunidades ganhas (Closed Won) desta conta no ano civil anterior. Actualizado automaticamente.</inlineHelpText>
    <label>Margem Ganha Ano Anterior</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>