sinalcabo/force-app/main/default/objects/Account/fields/Margem_Ganha_Total__c.field-meta.xml
<CustomField>
    <fullName>Margem_Ganha_Total__c</fullName>
    <description>SinalCabo: Populado por rollup (SC_Account_Rollup_Segmento). Soma da margem (Amount - Custo Estimado) de todas as oportunidades ganhas. Read-only no layout.</description>
    <inlineHelpText>Soma da margem (Amount menos Custo Estimado) de todas as oportunidades ganhas (Closed Won) desta conta, em qualquer ano. Actualizado automaticamente.</inlineHelpText>
    <label>Margem Ganha Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>