sinalcabo/force-app/main/default/objects/Account/fields/Margem_Grupo_Ano_Corrente__c.field-meta.xml
<CustomField>
    <fullName>Margem_Grupo_Ano_Corrente__c</fullName>
    <description>SinalCabo (DT.2) - Populado pelo rollup hierarquico (SC_Account_Group_Rollup). Soma da margem ganha do ano corrente propria mais a das contas filhas. Read-only no layout.</description>
    <inlineHelpText>Margem ganha do GRUPO no ano civil corrente (esta conta mais as filhas). Actualizado automaticamente.</inlineHelpText>
    <label>Margem do Grupo (Ano Corrente)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>