sinalcabo/force-app/main/default/objects/Account/fields/NIF__c.field-meta.xml
<CustomField>
    <fullName>NIF__c</fullName>
    <description>Identificador fiscal do cliente e chave única da conta, usada como external ID no upsert da migração e das integrações. A natureza do identificador é declarada no Tipo de Identificador Fiscal: em NIF (Portugal) ou em branco, as VR06, VR07 e VR08 impõem os 9 dígitos, o dígito de controlo e o prefixo; em Identificador estrangeiro nenhuma das três valida. O comprimento é 20 para caber identificadores estrangeiros (CIF, VAT); os 9 dígitos dos NIF nacionais continuam impostos pela VR06, não pelo comprimento do campo.</description>
    <externalId>true</externalId>
    <label>NIF</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>