sinalcabo/force-app/main/default/objects/Account/fields/Segmento__c.field-meta.xml
<CustomField>
    <fullName>Segmento__c</fullName>
    <description>Segmento comercial do cliente por volume de negócio (Bronze, Prata, Gold ou Platina). Calculado automaticamente pelo flow SC_Account_Rollup_Segmento a partir do total de Closed Won da conta, e usado pela fórmula Segmento_Visual__c para a apresentação com estrelas.</description>
    <label>Segmento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bronze</fullName>
            </value>
            <value>
                <fullName>Prata</fullName>
            </value>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Platina</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>