sinalcabo/force-app/main/default/objects/Account/fields/Segmento_Grupo__c.field-meta.xml
<CustomField>
    <fullName>Segmento_Grupo__c</fullName>
    <description>SinalCabo (DT.2) - Populado pelo rollup hierarquico (SC_Account_Group_Rollup). Segmento do GRUPO por volume agregado (mesmas bandas do Segmento individual). Read-only no layout.</description>
    <inlineHelpText>Segmento do GRUPO por volume de negocio agregado (esta conta mais as filhas). Mesmas bandas do Segmento individual. Actualizado automaticamente.</inlineHelpText>
    <label>Segmento do Grupo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bronze</fullName>
            </value>
            <value>
                <fullName>Prata</fullName>
            </value>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Platina</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>