sinalcabo/force-app/main/default/objects/Account/fields/Segmento_Margem__c.field-meta.xml
<CustomField>
    <fullName>Segmento_Margem__c</fullName>
    <description>SinalCabo: Populado por rollup (SC_Account_Rollup_Segmento). Segmento do cliente por margem ganha acumulada. Read-only no layout.</description>
    <label>Segmento (Margem)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bronze</fullName>
            </value>
            <value>
                <fullName>Prata</fullName>
            </value>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Platina</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>