sinalcabo/force-app/main/default/objects/Account/fields/Segmento_Visual__c.field-meta.xml
<CustomField>
    <fullName>Segmento_Visual__c</fullName>
    <description>SinalCabo: Segmento do cliente com indicador visual de estrelas.</description>
    <formula>CASE(Segmento__c,
  &quot;Platina&quot;, &quot;💎  Platina&quot;,
  &quot;Gold&quot;,    &quot;🟡  Gold&quot;,
  &quot;Prata&quot;,   &quot;⚪  Prata&quot;,
  &quot;Bronze&quot;,  &quot;🟤  Bronze&quot;,
             &quot;—  Sem segmento&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Segmento</label>
    <type>Text</type>
</CustomField>