sinalcabo/force-app/main/default/objects/Account/fields/Total_Closed_Won__c.field-meta.xml
<CustomField>
    <fullName>Total_Closed_Won__c</fullName>
    <description>SinalCabo: Populado por rollup (SC_Account_Rollup_Segmento). Read-only no layout.</description>
    <inlineHelpText>Soma de todas as oportunidades ganhas (Closed Won) desta conta, em qualquer ano. Actualizado automaticamente.</inlineHelpText>
    <label>Total Closed Won</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>