sinalcabo/force-app/main/default/objects/Account/fields/Total_Grupo_12M__c.field-meta.xml
<CustomField>
    <fullName>Total_Grupo_12M__c</fullName>
    <description>SinalCabo: Populado por rollup de grupo (SC_Account_Group_Rollup). Read-only no layout. Base de calculo do Segmento do Grupo desde 08/2026.</description>
    <inlineHelpText>Soma do negocio ganho por esta conta e por todas as filhas em os ultimos 12 meses COMPLETOS, excluindo o mes corrente: a janela fecha na viragem do mes, logo um negocio ganho hoje so&apos; conta a partir do dia 1 do mes seguinte.</inlineHelpText>
    <label>Total do Grupo 12 Meses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>