sinalcabo/force-app/main/default/objects/Account/validationRules/VR07_NIF_Checksum.validationRule-meta.xml
<ValidationRule>
    <fullName>VR07_NIF_Checksum</fullName>
    <active>true</active>
    <description>Dígito de controlo do NIF pelo algoritmo da Autoridade Tributária. Não valida quando o Tipo de Identificador Fiscal em Identificador estrangeiro; em branco valida. Dispara na criação e quando o NIF ou o tipo mudam; updates que não lhes tocam passam.</description>
    <errorConditionFormula>AND(
  OR(ISNEW(), ISCHANGED(NIF__c), ISCHANGED(Tipo_Identificador_Fiscal__c)),
  NOT(ISPICKVAL(Tipo_Identificador_Fiscal__c, &quot;Identificador estrangeiro&quot;)),
  NOT(ISBLANK(NIF__c)),
  REGEX(NIF__c, &quot;[0-9]{9}&quot;),
  VALUE(MID(NIF__c,9,1)) !=
    IF(
      11 - MOD(
        VALUE(MID(NIF__c,1,1))*9 +
        VALUE(MID(NIF__c,2,1))*8 +
        VALUE(MID(NIF__c,3,1))*7 +
        VALUE(MID(NIF__c,4,1))*6 +
        VALUE(MID(NIF__c,5,1))*5 +
        VALUE(MID(NIF__c,6,1))*4 +
        VALUE(MID(NIF__c,7,1))*3 +
        VALUE(MID(NIF__c,8,1))*2,
        11
      ) &gt;= 10,
      0,
      11 - MOD(
        VALUE(MID(NIF__c,1,1))*9 +
        VALUE(MID(NIF__c,2,1))*8 +
        VALUE(MID(NIF__c,3,1))*7 +
        VALUE(MID(NIF__c,4,1))*6 +
        VALUE(MID(NIF__c,5,1))*5 +
        VALUE(MID(NIF__c,6,1))*4 +
        VALUE(MID(NIF__c,7,1))*3 +
        VALUE(MID(NIF__c,8,1))*2,
        11
      )
    )
)</errorConditionFormula>
    <errorDisplayField>NIF__c</errorDisplayField>
    <errorMessage>Este NIF não é reconhecido como válido, confirma se foi introduzido correctamente. Pode ter um dígito trocado. Se o cliente for estrangeiro, muda o Tipo de Identificador Fiscal para Identificador estrangeiro.</errorMessage>
</ValidationRule>