sinalcabo/force-app/main/default/objects/Account/listViews/Contas_Segmento_Gold.listView-meta.xml
<ListView>
    <fullName>Contas_Segmento_Gold</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Segmento__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Segmento__c</field>
        <operation>equals</operation>
        <value>Gold</value>
    </filters>
    <label>Contas Segmento Gold</label>
</ListView>